# structs

./: .gitignore  CMakeLists.txt  README.md  data.txt  main.cpp
.github/workflows/: build.yml
app/: App.h  Controls.h  MainMenu.h  TreeMenu.h
data/: Capabilities.h  Graph.h  Node.h  SingleList.h  Tree.h
docs/: compile.md  datafile.md  user.md
entities/: Champion.h  Place.h
